@@ -1,7 +1,7 @@
 
-R version 3.0.2 (2013-09-25) -- "Frisbee Sailing"
-Copyright (C) 2013 The R Foundation for Statistical Computing
-Platform: i686-pc-linux-gnu (32-bit)
+R version 3.1.0 (2014-04-10) -- "Spring Dance"
+Copyright (C) 2014 The R Foundation for Statistical Computing
+Platform: x86_64-pc-linux-gnu (64-bit)
 
 R is free software and comes with ABSOLUTELY NO WARRANTY.
 You are welcome to redistribute it under certain conditions.
@@ -26,8 +26,8 @@ Type 'q()' to quit R.
 > zsetseed(123456890)
 > summary(zrnorm(1e6))
      Min.   1st Qu.    Median      Mean   3rd Qu.      Max. 
--5.060000 -0.675800  0.000132 -0.000176  0.674100  4.671000 
+-4.746000 -0.673900  0.000074  0.000444  0.674800  4.567000 
 > 
 > proc.time()
    user  system elapsed 
-  0.524   0.480   0.526 
+  0.721   0.058   0.765 
